--- a/BrowserExtensions/safari/main.html
+++ b/BrowserExtensions/safari/main.html
@@ -6,7 +6,7 @@
     var BASE_CONTROL_PORT = function() { return parseInt(safari.extension.settings.controllerPort) || 8008;};
 
     //PREVENTS LOG OUTPUT
-    console.log = function(){};
+//    console.log = function(){};
 
     // const SOCKET_TIMEOUT = 60000; //milleseconds
     const DELAY_TIMEOUT = 500;     // milleseconds
