--- a/BrowserExtensions/chrome/options.html
+++ b/BrowserExtensions/chrome/options.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <titleBeardedSpice Preferences</title>
+
+<head>
+    <titleBeardedSpice Preferences</title>
         <style>
-            body: { padding: 10px; }
-            </style>
-    </head>
-    
-    <body>
-        <label>
+        body: {
+            padding: 10px;
+        }
+        </style>
+</head>
+
+<body>
+    <label>
         BeardedSpice Controller Port:
         <input id="controllerPort" type="number" value="8008">
-        </label>
-        <button id="save">OK</button>
-        
-        <script src="options.js"></script>
-    </body>
+    </label>
+    <button id="save">OK</button>
+    <script src="options.js"></script>
+</body>
+
 </html>
