--- a/BeardedSpice/ExtensionsResources/ru.lproj/pairing.html
+++ b/BeardedSpice/ExtensionsResources/ru.lproj/pairing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Сопряжение с приложением BeardedSpice</title>
+        <title>Pairing with BeardedSpice App</title>
         <meta charset="UTF-8"/>
         <style type="text/css">
             body {
@@ -34,11 +34,11 @@
     <body onselectstart="return false">
         <div class="container">
             <div class="icon" draggable="false"></div>
-            <div id="message">Расширение BeardedSpice не установлено.</div>
+            <div id="message">BeardedSpice Extension is not installed.</div>
             <div style="display: none;" id="X_BeardedSpice_Browser_BundleId">${bundleId}</div>
-            <div style="display: none;" id="messagePairing">Сопряжение с приложением BeardedSpice...</div>
-            <div style="display: none;" id="messageSuccess">Приложение BeardedSpice сопряжено.</div>
-            <div style="display: none;" id="messageFailure">Сопряжение с приложением BeardedSpice не удалось.</div>
+            <div style="display: none;" id="messagePairing">Pairing with BeardedSpice App...</div>
+            <div style="display: none;" id="messageSuccess">BeardedSpice App paired.</div>
+            <div style="display: none;" id="messageFailure">BeardedSpice App pairing failure.</div>
         </div>
     </body>
 </html>
